--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>UMKM Kopi Nusantara</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
-</head>
+  </head>
 <body>
    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
@@ -43,27 +43,42 @@
         <img src="images/gambar1.jpg" alt="Kopi Nusantara" width="300">
     </p>
 
-    <p align="center">
-        <a href="https://wa.me/6281234567890">Pesan Sekarang via WhatsApp</a>
-    </p>
+   <!-- Tombol WhatsApp -->
+<div class="text-center my-4">
+  <a href="https://wa.me/6281234567890" 
+     class="btn btn-success btn-lg">
+    Pesan Sekarang via WhatsApp
+  </a>
+</div>
 
-    <p>
-        UMKM Kopi Nusantara menghadirkan berbagai pilihan kopi terbaik dari seluruh pelosok Indonesia.
-        Kami berkomitmen menyajikan kopi berkualitas dengan cita rasa otentik, mulai dari Arabika, Robusta,
-        hingga Liberika.
+<!-- Deskripsi UMKM -->
+<div class="card shadow-sm mb-4">
+  <div class="card-body">
+    <p class="card-text">
+      <strong>UMKM Kopi Nusantara</strong> menghadirkan berbagai pilihan kopi terbaik dari seluruh pelosok Indonesia.
+      Kami berkomitmen menyajikan kopi berkualitas dengan cita rasa otentik, mulai dari
+      <b>Arabika</b>, <b>Robusta</b>, hingga <b>Liberika</b>.
     </p>
+  </div>
+</div>
 
-    <hr>
-    <!-- Pertemuan 2: Daftar Produk -->
-    <h2>Varian Kopi</h2>
-    <ul>
-        <li>Kopi Arabika Gayo</li>
-        <li>Kopi Arabika Petungkriyono</li>
-        <li>Kopi Robusta Batang</li>
-        <li>Kopi Robusta Temanggung</li>
-        <li>Kopi Robusta Linggoasri</li>
-        <li>Kopi Liberika Riau</li>
+<hr>
+
+<!-- Pertemuan 2: Daftar Produk -->
+<h2 class="text-center mb-3">Varian Kopi</h2>
+
+<div class="row justify-content-center">
+  <div class="col-md-6">
+    <ul class="list-group">
+      <li class="list-group-item">☕ Kopi Arabika Gayo</li>
+      <li class="list-group-item">☕ Kopi Arabika Petungkriyono</li>
+      <li class="list-group-item">☕ Kopi Robusta Batang</li>
+      <li class="list-group-item">☕ Kopi Robusta Temanggung</li>
+      <li class="list-group-item">☕ Kopi Robusta Linggoasri</li>
+      <li class="list-group-item">☕ Kopi Liberika Riau</li>
     </ul>
+  </div>
+</div>
 
     <hr>
     <!-- Pertemuan 3: Tabel Produk (sesuai gambar) -->
@@ -161,4 +176,3 @@
 
 </body>
 </html>
-
