--- a/tentang.html
+++ b/tentang.html
@@ -40,26 +40,49 @@
 
 
   <main>
-    <h2>Profil Usaha Kami</h2>
-    <p>Kami berdiri sejak 2015, berkomitmen menghadirkan kopi terbaik langsung dari petani.</p>
+<!-- PROFIL USAHA -->
+<div class="card shadow-sm mb-4">
+  <div class="card-body">
+    <h2 class="card-title text-center mb-3">Profil Usaha Kami</h2>
+    <p class="card-text text-center">
+      Kami berdiri sejak <strong>2015</strong>, berkomitmen menghadirkan kopi terbaik langsung dari petani.
+    </p>
+  </div>
+</div>
 
-    <h3>Produk Unggulan:</h3>
-    <ul>
-      <li>Kopi Arabika Gayo</li>
-      <li>Kopi Robusta Temanggung</li>
-      <li>Kopi Liberika Riau</li>
+<!-- PRODUK UNGGULAN -->
+<div class="card shadow-sm mb-4">
+  <div class="card-body">
+    <h3 class="mb-3">Produk Unggulan</h3>
+    <ul class="list-group">
+      <li class="list-group-item">☕ Kopi Arabika Gayo</li>
+      <li class="list-group-item">☕ Kopi Robusta Temanggung</li>
+      <li class="list-group-item">☕ Kopi Liberika Riau</li>
     </ul>
+  </div>
+</div>
 
-    <h3>Tahapan Produksi:</h3>
-    <ol>
-      <li>Pemetikan buah kopi segar</li>
-      <li>Proses sangrai tradisional</li>
-      <li>Pengemasan dan pengiriman</li>
+<!-- TAHAPAN PRODUKSI -->
+<div class="card shadow-sm mb-4">
+  <div class="card-body">
+    <h3 class="mb-3">Tahapan Produksi</h3>
+    <ol class="list-group list-group-numbered">
+      <li class="list-group-item">Pemetikan buah kopi segar</li>
+      <li class="list-group-item">Proses sangrai tradisional</li>
+      <li class="list-group-item">Pengemasan dan pengiriman</li>
     </ol>
+  </div>
+</div>
 
-    <h3>Kunjungi Kami:</h3>
-    <p><a href="https://instagram.com/kopinusantara" target="_blank">Instagram Kopi Nusantara</a></p>
-  </main>
+<!-- LINK INSTAGRAM -->
+<div class="text-center mt-4">
+  <a href="https://instagram.com/kopinusantara" 
+     target="_blank" 
+     class="btn btn-outline-dark btn-lg">
+    Kunjungi Instagram Kopi Nusantara
+  </a>
+</div>
+</main>
 
   <footer>
     <p>&copy; 2025 Kopi Nusantara. Semua hak dilindungi.</p>
@@ -68,4 +91,3 @@
 
 </body>
 </html>
-
